// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING SectionHeading component GIVEN an empty RightContent WHEN the SectionHeading component is rendered in snapshot testing THEN it should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 border-new-white text-new-white flex justify-between items-end md:p-2"
  >
    <h2
      class="uppercase font-medium font-comfortaa tracking-wide tracking-widest md:tracking-[0.375rem] text-base"
    >
      Sample Heading
    </h2>
    <span />
  </div>
</DocumentFragment>
`;

exports[`TESTING SectionHeading component GIVEN valid props WHEN the SectionHeading component is rendered in snapshot testing THEN it should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 border-new-white text-new-white flex justify-between items-end md:p-2"
  >
    <h2
      class="uppercase font-medium font-comfortaa tracking-wide tracking-widest md:tracking-[0.375rem] text-base"
    >
      Sample Heading
    </h2>
    <span>
      <div>
        Right Content
      </div>
    </span>
  </div>
</DocumentFragment>
`;
